[gd_scene load_steps=16 format=3 uid="uid://bq7hbknqj62qe"]

[ext_resource type="PackedScene" uid="uid://cqtvgqts82kcg" path="res://scenes/enemy/enemy_base.tscn" id="1_ffakn"]
[ext_resource type="Texture2D" uid="uid://bf5spno8xkmgq" path="res://assets/enemies/frog/frog_sheet.png" id="2_ciiat"]
[ext_resource type="Script" path="res://scenes/enemy/frog.gd" id="2_ydpv0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sbfxv"]
atlas = ExtResource("2_ciiat")
region = Rect2(210, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxt2r"]
atlas = ExtResource("2_ciiat")
region = Rect2(175, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5t7rx"]
atlas = ExtResource("2_ciiat")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aq550"]
atlas = ExtResource("2_ciiat")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8slp0"]
atlas = ExtResource("2_ciiat")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmdm3"]
atlas = ExtResource("2_ciiat")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgvl2"]
atlas = ExtResource("2_ciiat")
region = Rect2(140, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aii8w"]
atlas = ExtResource("2_ciiat")
region = Rect2(175, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3h7ki"]
atlas = ExtResource("2_ciiat")
region = Rect2(210, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_u8dbh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbfxv")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxt2r")
}],
"loop": true,
"name": &"hop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5t7rx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aq550")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8slp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmdm3")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_qgvl2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aii8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3h7ki")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8tmq6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jq2na"]
size = Vector2(14, 10)

[node name="Frog" instance=ExtResource("1_ffakn")]
script = ExtResource("2_ydpv0")
jump_timer_min = 2.0
jump_timer_max = 4.0

[node name="AnimatedSprite2D" parent="." index="1"]
sprite_frames = SubResource("SpriteFrames_u8dbh")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource("CircleShape2D_8tmq6")

[node name="CollisionShape2D" parent="." index="3"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_jq2na")

[node name="JumpTimer" type="Timer" parent="." index="4"]
one_shot = true

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
